tests/should-fail/alias-as-name.j
globals
    integer alias = 0
endglobals